[tool.poetry]
name = "vpdbz"
version = "0.4.0"
description = "Python debug configuration generator for vscode"
authors = ["kf.zhang <kf.zhang@shunwang.com>"]
readme = "README.md"
repository = "https://github.com/zhangkaifang/vpdbz"
keywords = ["vscode", "debug", "launch.json", "vpdbz"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^71.1.0"
wheel = "^0.43.0"
jstyleson = "^0.0.2"

[tool.poetry.scripts]
vpdbz = "vpdbz.main:__main__"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
